--- a/simple base website/page2.html
+++ b/simple base website/page2.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 <head>
-<title>frog</title>
+    <title>info bramble</title>
+    <link rel="stylesheet" href="editor.css">
 </head>
 
 <body>
-    frog
-    <img src="frog.jpg" alt="frog">
+
+    <h1>lorem</h1>
+
+    <p id="first">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+    </p>
+
+    <table width="900">
+        <tr>
+            <th>1 lorem</th>
+            <th>2 lorem</th>
+            <th>3 lorem</th>
+            <th>4 lorem</th>
+            <th>5 lorem</th>
+            <th>6 lorem</th>
+            <th>7 lorem</th>
+            <th>8 lorem</th>
+            <th>9 lorem</th>
+            <th>10 lorem</th>
+        </tr>
+
+        <tr align="center">
+            <td>10.5%</td>
+            <td>12.9%</td>
+            <td>40.3%</td>
+            <td>32.8%</td>
+            <td>52.6%</td>
+            <td>8.3%</td>
+            <td>55.5%</td>
+            <td>42.6%</td>
+            <td>18.3%</td>
+            <td>22.7%</td>
+        </tr>
+    </table>
+
+    <br><br><br>
+
+    <div style="display: flex;" class="box">
+        <p style="flex: 1; margin-right: 30px;" id="left_lorem">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+        </p>
+        <p style="flex: 1;" id="right_lorem">
+            lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere odit accusamus sapiente unde fuga ratione quidem praesentium natus vel doloremque et tempore, commodi quibusdam consequatur, sed ad eligendi aliquid 
+
+        </p>       
+    </div>
+
 </body>
 </html>
